recoverFromOplogAsStandalone does not relax index constraints

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.4, v4.2
    • Repl 2020-07-27, Repl 2020-08-10
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Normal replication recovery does, because shouldRelaxIndexConstraints returns "true" during STARTUP but shouldRelaxIndexConstraints returns "false" on a standalone, so recoverFromOplogAsStandalone does not.

            Assignee:
            Judah Schvimer
            Reporter:
            Judah Schvimer
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: