SERVER-49527 recoverFromOplogAsStandalone does not relax index constraints

(cherry picked from commit e0cde43310e5dab3fcf6e93bb115259e70a165e8)